--- a/css/style.css
+++ b/css/style.css
@@ -1,41 +1,51 @@
-img{
+img {
     width: 100%;
     display: block;
 }
 
-.ms_height_10{
+.ms_height_10 {
     height: 10px;
     width: 55px;
 }
 
-.ms_mt_main{
+.ms_mt_main {
     margin-top: 92px;
 }
 
-.ms_jumbo{
+.ms_jumbo {
     background-image: url('../img/jumbo-bg.png');
     background-position: top;
     background-size: cover;
 }
 
-.ms_height{
+.ms_height {
     height: 350px;
 }
 
-.ms_fs_10{
+.ms_fs_10 {
     font-size: 10px;
 }
 
-.ms_fs_12{
+.ms_fs_12 {
     font-size: 12px;
 }
 
+.ms_two {
+    background-image: url('../img/it-takes-two-hero-banner-desktop.jpg');
+    background-position: top;
+    background-size: cover;
+}
+
+.ms_height_two {
+    height: auto;
+}
+
 @media screen and (min-width: 576px) {
-    .ms_sm_height{
+    .ms_sm_height {
         height: 550px;
     }
 
-    .ms_fs_sm_16{
+    .ms_fs_sm_16 {
         font-size: 16px;
     }
 }
