--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,10 @@ img {
     background-color: #bebcbb;
 }
 
+.ms_bg_darkblue{
+    background-color: #161c3b;
+}
+
 .ms_width_60{
     width: 60%;
 }
