--- a/css/style.css
+++ b/css/style.css
@@ -110,6 +110,25 @@ ul.d-flex.justify-content-center li::before {
     width: 33%;
 }
 
+.ms_shadow:hover {
+    box-shadow: 0 0 3px black;
+    background-color: white;
+}
+
+.ms_opacity{
+    opacity: 0.5;
+}
+
+.ms_opacity_hover:hover{
+    opacity: 1;
+    border-bottom: 1px solid #0d6efd;
+}
+
+.ms_card{
+    width: calc(100% - 16px);
+    margin: 0 auto;
+}
+
 @media screen and (min-width: 576px) {
     .ms_sm_height {
         height: 550px;
@@ -117,5 +136,24 @@ ul.d-flex.justify-content-center li::before {
 
     .ms_fs_sm_16 {
         font-size: 16px;
+    }
+}
+
+@media screen and (min-width: 992px) {
+    .ms_relative{
+        position: relative;
+    }
+
+    .ms_absolute{
+        position: absolute;
+    }
+
+    .ms_animation:hover{
+        bottom: 10px;
+        transition: 1s;
+    }
+
+    .ms_ptop{
+        padding-top: 120px;
     }
 }
